Refactoring + tests on Repository